istio/kubernetes-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis-deployment
  template:
    metadata:
      labels:
        app: redis-deployment
    spec:
      volumes:
        - name: my-vol
          persistentVolumeClaim:
            claimName: projet-devops-pv-claim
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: my-vol
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis-deployment
  ports:
    - protocol: TCP
      name: tcp
      port: 6379
      targetPort: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projet-devops-deployment
  labels:
    app: projet-devops
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projet-devops
      version: v1
  template:
    metadata:
      labels:
        app: projet-devops
        version: v1
    spec:
      containers:
        - name: projet-devops
          image: polocto/projet-devops
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: projet-devops
  labels:
    app: projet-devops
    service: projet-devops
spec:
  selector:
    app: projet-devops
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: http
      port: 3000
      targetPort: 3000
      nodePort: 30000
