istio/virtual-service-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: projet-devops
spec:
  hosts:
    - projet-devops
  http:
    - route:
        - destination:
            host: projet-devops
            subset: v1
          weight: 50
        - destination:
            host: projet-devops
            subset: v2
          weight: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: projet-devops
spec:
  host: projet-devops
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
